[package]
name = "moostache"
version = "0.1.1"
edition = "2021"
description = "Mustache template engine"
license = "MIT"
repository = "https://github.com/pretzelhammer/moostache"
documentation = "https://docs.rs/moostache"

[dependencies]
winnow = "0.6.20"
serde = "1.0.215"
serde_json = "1.0.133"
lru = "0.12.5"
walkdir = "2.5.0"
fnv = "1.0.7"

[dev-dependencies]
serde_derive = "1.0.215"
maplit = "1.0.2"
