[package]
name = "moostache"
version = "0.3.0"
edition = "2021"
description = "Mustache template engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pretzelhammer/moostache"
documentation = "https://docs.rs/moostache"
keywords = ["mustache", "template", "markup", "html"]
readme = "crates-io.md"
include = [
    "src/**",
    "examples/**",
    "crates-io.md",
    "Cargo.toml",
    "license-apache",
    "license-mit",
]

[lib]
path = "src/lib.rs"

[dependencies]
winnow = "0.6.20"
serde = "1.0.215"
serde_json = "1.0.133"
lru = "0.12.5"
walkdir = "2.5.0"
fnv = "1.0.7"

[dev-dependencies]
serde_derive = "1.0.215"
maplit = "1.0.2"
indoc = "2"
